--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@ url=https://github.com/OS2Forms/os2forms_frontend.git
 [submodule "public_html/sites/all/modules/custom/os2forms_backend"]
 	path = public_html/sites/all/modules/custom/os2forms_backend
 	url = https://github.com/OS2Forms/os2forms_backend.git
+[submodule "public_html/sites/all/modules/custom/os2forms_date_popup"]
+	path = public_html/sites/all/modules/custom/os2forms_date_popup
+	url = https://github.com/OS2Forms/os2forms_date_popup
