--- a/public_html/sites/all/themes/custom/site/src/compile-settings.json
+++ b/public_html/sites/all/themes/custom/site/src/compile-settings.json
@@ -1,6 +1,6 @@
 {
   "options": {
-    "proxy": "http://valghalla.test"
+    "proxy": "http://forms.rebild.test"
   },
   "javascripts": [
     "node_modules/bootstrap-sass/assets/javascripts/bootstrap.js",
